# mettledeck-sdk

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
examples/: add_media_and_attachments.py  create_task.py  list_tasks.py  move_task.py  update_task.py  watch_tasks.py
openapi/: mettledeck-v1.json
scripts/: check_openapi.py
src/mettledeck/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_client.py  test_models.py  test_openapi.py
