[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mettledeck"
dynamic = ["version"]
description = "Typed Python SDK for the MettleDeck local automation API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Quantum Oblique" }]
dependencies = ["httpx>=0.27,<1"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.6",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/quantum-oblique/mettledeck-sdk"
Documentation = "https://github.com/quantum-oblique/mettledeck-sdk#readme"
Issues = "https://github.com/quantum-oblique/mettledeck-sdk/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mettledeck = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "mettledeck._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
